--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,76 @@
 body {
   background: peachpuff;
 }
+
+* {
+  border: 5px solid rgb(196, 71, 109);
+}
+
+.container {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  min-height: 200vh;
+  justify-content: space-between;
+}
+
+.a {
+  flex-grow: 1;
+}
+
+aside {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 20vh;
+}
+
+aside>div {
+  flex-grow: 10;
+}
+
+.h {
+  flex-grow: 1;
+}
+
+@media (min-width: 700px) {
+  aside, .h {
+    flex-direction: row;
+  }
+  aside {
+    width: 80%;
+    height: 30%
+    flex: 4;
+    align-items: center;
+    margin-right: 1em;
+  }
+  aside>div {
+    height: 10em;
+  }
+  .h {
+    flex: 2;
+    width: 18%;
+    max-height: 5%;
+    align-self: flex-end;
+  }
+  /*.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  aside {
+    flex: 4;
+    width: 80%;
+    align-items: center;
+  }
+  .h {
+    min-width: 20%;
+  }
+  .a {
+    display: block;
+    height: 20vh;
+    min-width: 50%;*/
+  }
+}
